    * 0310 FIX: apache_status: Improved handling of unexpeted data sent by agents...
    * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
    * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
    * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...

    Multisite:
    * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
    * 0239 FIX: Fixed incorrect html formatting when displaying host or service comments...
    * 0307 FIX: Increased performance of multisite GUI with a large userbase...
    * 0312 FIX: Hiding views related to not existing datasources, like the EC now...
    * 0325 FIX: Removed CSV export icon from availability views...
    * 0327 FIX: Most forms did now work with "Profile Requests" enabled...

    WATO:
    * 0308 Multisite can now set rotation view permissions for NagVis...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...

    Notifications:
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...