@@ -23,6 +23,7 @@
     * 0088 FIX: esx_vsphere_datastores: fixed error with reported capacity of 0 bytes...
     * 0243 FIX: cisco_qos: no longer crashes when the qos policy name is not set...
     * 0326 FIX: hr_fs printer_supply: Improved translation of wrong encoded chars...
+    * 0059 FIX: agent_vpshere: new option for supporting ESX 4.1...
 
     Multisite:
     * 0302 FIX: Fixed highlight of choosen elements in foldertee/views snapin in Chrome/IE
